<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FONDO"
    tools:context=".modificacion_cuadernos">
    <TextView
        android:id="@+id/idCuaderno"
        android:layout_width="106dp"
        android:layout_height="92dp"
        android:enabled="false"
        android:fontFamily="cursive"
        android:text="@string/idCuaderno"
        android:textColor="@color/colorLetras"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.367"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.386" />

    <TextView
        android:id="@+id/textView3"

        android:layout_width="249dp"
        android:layout_height="136dp"
        android:autofillHints="@string/nuevoApunte"
        android:fontFamily="cursive"
        android:hint="@string/nuevoApunte"
        android:selectAllOnFocus="true"
        android:text="@string/modificacionCuaderno"
        android:textAlignment="center"
        android:textColor="@color/colorLetras"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154" />

    <EditText
        android:id="@+id/nombreCuaderno"
        android:layout_width="248dp"
        android:layout_height="170dp"
        android:fontFamily="cursive"
        android:text="Nombre Cuaderno"
        android:textColor="@color/colorLetras"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.632" />

    <Button
        android:id="@+id/btnModificar"
        android:layout_width="131dp"
        android:layout_height="69dp"
        android:backgroundTint="@color/botones"
        android:fontFamily="cursive"
        android:text="@string/btnModificar"
        android:textColor="@color/colorLetras"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.386" />

    <Button
        android:id="@+id/btnCancelarModificar"
        android:layout_width="126dp"
        android:layout_height="67dp"
        android:backgroundTint="@color/botones"
        android:fontFamily="cursive"
        android:text="@string/btnCancelar"
        android:textColor="@color/colorLetras"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.992"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.518" />

</androidx.constraintlayout.widget.ConstraintLayout>