<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FONDO"
    tools:context=".modificacion_apuntes">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="233dp"
        android:layout_height="123dp"
        android:backgroundTint="@color/botones"
        android:fontFamily="cursive"
        android:text="@string/modificacionApuntes"
        android:textAlignment="center"
        android:textColor="@color/colorLetras"

        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />

    <EditText
        android:id="@+id/textoApunteModificar"
        android:layout_width="186dp"
        android:layout_height="60dp"
        android:autofillHints="@string/nuevoBitacora"
        android:fontFamily="cursive"
        android:hint="@string/nuevoApunte"
        android:selectAllOnFocus="true"
        android:textColor="@color/colorLetras"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <Button
        android:id="@+id/btnModificacionApuntes"
        android:layout_width="164dp"
        android:layout_height="68dp"
        android:backgroundTint="@color/botones"
        android:fontFamily="cursive"
        android:text="@string/btnModificar"
        android:textColor="@color/colorLetras"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.371" />

    <Button
        android:id="@+id/btnCancelarModificacionApuntes"

        android:layout_width="162dp"
        android:layout_height="64dp"
        android:backgroundTint="@color/botones"
        android:fontFamily="cursive"
        android:text="@string/btnCancelar"

        android:textColor="@color/colorLetras"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.484" />

    <EditText
        android:id="@+id/txtFechaModificacion"
        android:layout_width="186dp"
        android:layout_height="64dp"
        android:ems="10"
        android:fontFamily="cursive"
        android:inputType="date"
        android:textAlignment="center"
        android:textColor="@color/colorLetras"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.369" />

    <TextView
        android:id="@+id/txtIdApunte"
        android:layout_width="133dp"
        android:layout_height="41dp"
        android:fontFamily="cursive"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/colorLetras"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273" />

</androidx.constraintlayout.widget.ConstraintLayout>